--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@600&display=swap');
+
 body {
   background-color: #202020;
 }
@@ -17,10 +19,24 @@ body {
   grid-template-rows: repeat(var(--size), 1fr);
 }
 
+.cell, .tile {
+  border-radius: 5px;
+}
+
 .cell {
   width: 90%;
   height: 90%;
-  border-radius: 5px;
   margin: 5px;
   background-color: #848484;
+}
+
+.tile {
+  width: 100%;
+  height: 100%;
+  font-size: 50px;
+  font-family: "Fredoka", sans-serif;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
